--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -71,9 +71,9 @@ enable-ipc = true
 #tray-position = center
 #tray-background = ${colors.bg}
 
-
+# Херня
 tray-position = center
-tray-offset-x = 278pt
+tray-offset-x = 250pt
 tray-offset-y = 0pt
 #tray-padding = 5
 
