--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -128,6 +128,31 @@ label-mounted =  %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
+[module/wireless-network]
+type = internal/network
+interface = wlp3s0
+interval = 3.0
+
+format-connected-prefix = " "
+
+format-connected-background = ${colors.background}
+format-connected = "   <ramp-signal> <label-connected>  "
+format-connected-underline = ${colors.underscore}
+label-connected =
+
+format-disconnected = " no wifi :( "
+format-disconnected-background = ${colors.background-unf}
+;format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = %ifname% disconnected
+label-disconnected-foreground = ${colors.foreground-alt}
+
+ramp-signal-0 = "    0%"
+ramp-signal-1 = "    25%"
+ramp-signal-2 = "    50%"
+ramp-signal-3 = "    75%"
+ramp-signal-4 = "    100%"
+ramp-signal-foreground = ${colors.foreground-alt}
+
 [module/htb_target]
 type = custom/script
 interval = 2
