--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -19,11 +19,13 @@
 [colors]
 #background = #1d2021
 #background = #2e3440
-background = #000000
+background = #aa000000
 #background-alt = #3b4252
-background-alt = #1d2021
-foreground = #C5C8C6
-alert = #cc241d
+foreground-alt = ${xrdb:color7:#000}
+#foreground = #C5C8C6
+primary = ${xrdb:color3:#222}
+secondary = ${xrdb:color7:#222}
+alert = ${xrdb:color3:#222}
 green = #98971a
 #yellow = #d79921
 blue = #458588
