--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -63,7 +63,7 @@ font-0 = "Hack Nerd Font:size=10;2"
 
 modules-left = round-left xwindow
 modules-center = xworkspaces
-modules-right = htb eth0 htb_target pulseaudio date
+modules-right = htb eth0 htb_target pulseaudio
 #filesystem, htb , eth
 cursor-click = pointer
 cursor-scroll = ns-resize
