--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -20,11 +20,8 @@
 #background = #1d2021
 #background = #2e3440
 background = #aa000000
-#background-alt = #3b4252
 foreground-alt = ${xrdb:color7:#000}
-#foreground = #C5C8C6
-primary = ${xrdb:color3:#222}
-secondary = ${xrdb:color7:#222}
+foreground = #C5C8C6
 alert = ${xrdb:color3:#222}
 green = #98971a
 #yellow = #d79921
