--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -86,7 +86,7 @@ tray-offset-y = 0pt
 [module/round-left]
 type = custom/text
 content = " 󰣇 "
-content-foreground = ${colors.black}
+content-foreground = ${colors.blue}
 content-font = 3 
 content-padding = 0
 content-margin = 0
