--- a/config/i3/config
+++ b/config/i3/config
@@ -44,7 +44,7 @@ exec --no-startup-id setxkbmap "us,ru" ",winkeys" "grp:ctrl_alt_toggle"
 #exec setxkbmap "us,ru" ",winkeys" "grp:alt_shift_toggle"
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec "rofi -show run"
