--- a/config/i3/config
+++ b/config/i3/config
@@ -1,5 +1,6 @@
 
 set $mod Mod1
+# Mod1 = ALT
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -13,7 +14,7 @@ exec ~/.config/polybar/launch.sh
 
 #start chromium
 
-bindsym $mod+Shift+h exec firefox
+bindsym $mod+Shift+h exec chromium
 
 #picom start
 exec picom &
